# IntelligentHarness

./: .env.example  .gitignore  LICENSE  README.md  cli.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_marketing_workflow.py
.github/workflows/: ci.yml
config/: harness.yaml
docs/: workflow-design.md
examples/: marketing_input.json
fixtures/fault_injection/: about  marketing_copy_rejected.embeddings.json  marketing_copy_rejected.json  marketing_copy_semantic_bypass.json
intelligent_harness/: __init__.py  assembler.py  errors.py  events.py  models.py  ports.py  scenarios.py  services.py  workflow.py
intelligent_harness/adapters/: __init__.py  embedding.py  llm.py  logging.py  paths.py  repository.py  settings.py
intelligent_harness/cli/: __init__.py  app.py  commands.py  constants.py  fault_injection.py  parser.py
scenarios/content_safety/: scenario.yaml
scenarios/financial_audit/: scenario.yaml
scenarios/loan_qualification/: scenario.yaml
scenarios/marketing_copy/: risk_samples.json  scenario.yaml
src/: config.py  exceptions.py  llm.py  logger.py  path_utils.py
src/prompts/: marketing_prompts.py
src/repositories/: send_record_repo.py
src/schemas/: marketing.py
src/services/: generator.py  json_parser.py  recorder.py  reviewer.py  sender.py
test/: test_assembler.py  test_cli.py  test_embedding.py  test_extensions.py  test_path_and_config.py  test_prompt_rendering.py  test_scenario_runtime.py  test_services.py  test_settings.py  test_workflow.py  test_workflow_branches.py
(+19 files in other folders)
