[project]
name = "intelligent-harness"
version = "0.1.0"
description = "A bounded LLM output control layer for high-impact workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

[tool.pytest.ini_options]
testpaths = ["test", "tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["test/"]
